<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/keybg"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-25dp"
    tools:layout_editor_absoluteY="-131dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/calculations"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="end|bottom"
        android:layoutDirection="rtl"
        android:paddingHorizontal="35sp"
        android:paddingVertical="10sp"
        android:text="@string/calc_text"
        android:textColor="@color/numbers"
        android:textSize="28sp"
        android:layout_marginBottom="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp"
        android:paddingVertical="0sp"
        >
        <Button
            android:id="@+id/AC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/all_clear"
            android:textColor="@color/keybg"
            android:layout_marginHorizontal="5sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />

        <Button
            android:id="@+id/modulus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/modulus"
            android:textColor="@color/numbers"
            android:layout_marginHorizontal="5sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textColor="@color/numbers"
            android:layout_marginHorizontal="5sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp"
        >
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="48sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp"
        >
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="48sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp"
        >
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="48sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="@color/numbers"
            android:layout_margin="4sp"
            android:textSize="32sp"
            android:onClick="OnDigit"
            />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>